fix arrow position on mobile devices

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,6 +23,11 @@
   src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/k3k702ZOKiLJc3WVjuplzKRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -36,6 +41,7 @@ body {
     font-family: 'Open Sans', sans-serif!important;
     font-weight: 300;
     color: #3e3e3e;
+    overflow-x: hidden;
     font-size: 16pt;
 }
 
